Undo intentionally broken import in a notebook to test CI.

--- a/notebooks/site_activation_demo.ipynb
+++ b/notebooks/site_activation_demo.ipynb
@@ -48,7 +48,7 @@
     "sys.path.append(metis_path)\n",
     "sys.path.append(os.path.join(metis_path, 'metis'))\n",
     "import site_activation_vis\n",
-    "import mmetis.io"
+    "import metis.io"
    ]
   },
   {
