Update imports in site activation notebook

--- a/notebooks/site_activation_demo.ipynb
+++ b/notebooks/site_activation_demo.ipynb
@@ -42,13 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
-    "metis_path = os.path.join(os.path.split(os.path.abspath('.'))[0], 'py')\n",
-    "sys.path.append(metis_path)\n",
-    "sys.path.append(os.path.join(metis_path, 'metis'))\n",
-    "import site_activation_vis\n",
-    "import metis.io"
+    "from metis import site_activation_vis\n",
+    "from metis import io as metis_io"
    ]
   },
   {
@@ -173,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_ds = metis.io.load_ville_from_netcdf(file_path)\n",
+    "original_ds = metis_io.load_ville_from_netcdf(file_path)\n",
     "site_activation_vis.site_activation(original_ds)"
    ]
   },
