--- a/notebooks/site_activation_demo.ipynb
+++ b/notebooks/site_activation_demo.ipynb
@@ -43,8 +43,11 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from metis import site_activation_vis\n",
-    "from metis import io as metis_io"
+    "import importlib.resources\n",
+    "\n",
+    "from metis import demo_data\n",
+    "from metis import io as metis_io\n",
+    "from metis import site_activation_vis"
    ]
   },
   {
@@ -74,7 +77,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set up file paths"
+    "## Import data\n",
+    "\n",
+    "For this demo, we read demonstration data embedded in the Metis Python package or data created by notebook `trial_specification_demo.ipynb`.\n",
+    "\n",
+    "To read in your own data, pass either a local file path or a path to a file in Cloud Storage to parameter `file_path` of method `load_ville_from_netcdf`."
    ]
   },
   {
@@ -83,10 +90,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_path = os.path.join(os.path.abspath('.'), 'demo_data')\n",
-    "\n",
-    "file_name = 'site_list1_all_site_on.nc'\n",
-    "file_path = os.path.join(demo_path, file_name)"
+    "# Import demonstation data from the Metis Python package.\n",
+    "with importlib.resources.path(demo_data, 'site_list1_all_site_on.nc') as p:\n",
+    "  demo_data_file_path = os.fspath(p)\n",
+    "  original_ds = metis_io.load_ville_from_netcdf(file_path=demo_data_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can also import demonstration data created by notebook trial_specification_demo.ipynb by uncommenting one of the lines below.\n",
+    "#original_ds = metis_io.load_ville_from_netcdf(file_path='demo_output/site_list1_all_site_on.nc')\n",
+    "#original_ds = metis_io.load_ville_from_netcdf(file_path='demo_output/site_list1_optimized_static.nc')\n",
+    "#original_ds = metis_io.load_ville_from_netcdf(file_path='demo_output/site_list1_prioritized.nc')"
    ]
   },
   {
@@ -169,19 +188,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_ds = metis_io.load_ville_from_netcdf(file_path)\n",
     "site_activation_vis.site_activation(original_ds)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "environment": {
+   "name": "r-cpu.3-6.m56",
+   "type": "gcloud",
+   "uri": "gcr.io/deeplearning-platform-release/r-cpu.3-6:m56"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -197,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
