Add flag to pip to eliminate one warning.

--- a/docs/terra_featured_workspace/run_me_first.ipynb
+++ b/docs/terra_featured_workspace/run_me_first.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "pip3 install --upgrade \\\n",
+    "pip3 install --upgrade --use-feature=2020-resolver \\\n",
     "  git+https://github.com/verilylifesciences/metis.git"
    ]
   },
