Use the new name in the setup notebook.

--- a/docs/terra_featured_workspace/run_me_first.ipynb
+++ b/docs/terra_featured_workspace/run_me_first.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Install the Metis toolkit\n",
+    "# Install the Baseline Site Selection Tool\n",
     "\n",
-    "The following commands will install the current version of [the Metis toolkit](https://github.com/verilylifesciences/metis) on your Terra [detachable persistent disk](https://support.terra.bio/hc/en-us/articles/360047318551-Detachable-Persistent-Disks-)."
+    "The following commands will install the current version of the [Baseline Site Selection Tool](https://github.com/verilylifesciences/metis) on your Terra [detachable persistent disk](https://support.terra.bio/hc/en-us/articles/360047318551-Detachable-Persistent-Disks-)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install the Metis Python package."
+    "## Install the Python package."
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to uninstall the Metis toolkit"
+    "## How to uninstall the Python package"
    ]
   },
   {
