--- a/notebooks/trial_specification_demo.ipynb
+++ b/notebooks/trial_specification_demo.ipynb
@@ -816,7 +816,7 @@
    "source": [
     "### Example: Custom loss penalizing site activation and promoting diverse participants\n",
     "\n",
-    "Suppose we want to factor in considerations aside from how quickly the trial succeeds. In this example, we assume that activating sites is expensive, so we'd like to activate as few of them as possible, so long as it doesn't delay the success of the trial too much. Similarly, we assume that it's valuable to have a larger proportion of elderly, black, or hispanic participants, and we're willing to activate sites which can recruit from these demographic groups, even if doing so delays  time to success."
+    "Suppose we want to factor in considerations aside from how quickly the trial succeeds. In this example, we assume that activating sites is expensive, so we'd like to activate as few of them as possible, so long as it doesn't delay the success of the trial too much. Similarly, we assume that it's valuable to have a larger proportion of elderly, black, or hispanic participants, and we're willing to activate sites which can recruit from these demographic groups, even if doing so delays success a bit."
    ]
   },
   {
@@ -854,6 +854,7 @@
     "  # remaining dimensions are [age, ethnicity]\n",
     "  participants = c.participants.sum(axis=0).sum(axis=0).sum(axis=-1)\n",
     "  total_participants = participants.sum()\n",
+    "\n",
     "  return (\n",
     "    optimization.negative_mean_successiness(c)  # demonstrate efficacy fast\n",
     "    + 0.2 * c.site_activation.mean()  # turning on sites is costly\n",
