Update contact email address.

--- a/notebooks/site_activation_demo.ipynb
+++ b/notebooks/site_activation_demo.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "Moreover, the trial planner can *interactively* change recruitment at *individual* sites and visualize the impact on trial outcomes. The user can propose new recruitment rates at individual sites. The notebook then computes the new, proposed trial outcomes -- including the expected time to success of the trial and the expected demographic distribution of participants. We then display the original trial outcomes as well the proposed outcomes.\n",
     "\n",
-    "If your trial has additional complications that you would like the tool to capture, please contact metis@projectbaseline.com for additional help."
+    "If your trial has additional complications that you would like the tool to capture, please contact site-selection-tool@projectbaseline.com for additional help."
    ]
   },
   {
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Any trial planner who would like to refine this analysis for their trial can contact metis@projectbaseline.com"
+    "Any trial planner who would like to refine this analysis for their trial can contact site-selection-tool@projectbaseline.com"
    ]
   },
   {
