--- a/notebooks/trial_specification_demo.ipynb
+++ b/notebooks/trial_specification_demo.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "We write out different trial plans, which you can then examine interactively in the second notebook in the Metis Toolbox. That notebook lets you visualize how the trial is proceeding at a per site level and experiment with what will happen when you turn up or down different sites.\n",
     "\n",
-    "If you have questions about how to implement these steps for your clinical trial, or there are variations in the trial specification that are not captured with this framework, please contact metis@projectbaseline.com for additional help."
+    "If you have questions about how to implement these steps for your clinical trial, or there are variations in the trial specification that are not captured with this framework, please contact site-selection-tool@projectbaseline.com for additional help."
    ]
   },
   {
