Perform more renaming.

--- a/docs/terra_featured_workspace/run_me_first.ipynb
+++ b/docs/terra_featured_workspace/run_me_first.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Install the Baseline Site Selection Tool\n",
     "\n",
-    "The following commands will install the current version of the [Baseline Site Selection Tool](https://github.com/verilylifesciences/metis) on your Terra [detachable persistent disk](https://support.terra.bio/hc/en-us/articles/360047318551-Detachable-Persistent-Disks-)."
+    "The following commands will install the current version of the [Baseline Site Selection Tool](https://github.com/verilylifesciences/site-selection-tool) on your Terra [detachable persistent disk](https://support.terra.bio/hc/en-us/articles/360047318551-Detachable-Persistent-Disks-)."
    ]
   },
   {
@@ -25,7 +25,7 @@
     "%%bash\n",
     "\n",
     "pip3 install --upgrade --use-feature=2020-resolver \\\n",
-    "  git+https://github.com/verilylifesciences/metis.git"
+    "  git+https://github.com/verilylifesciences/site-selection-tool.git"
    ]
   },
   {
@@ -46,9 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To uninstall the Metis Python package:\n",
+    "To uninstall the Baseline Site Selection Tool Python package:\n",
     "```\n",
-    "pip3 uninstall --yes metis\n",
+    "pip3 uninstall --yes bsst\n",
     "```"
    ]
   }
