--- a/notebooks/site_activation_demo.ipynb
+++ b/notebooks/site_activation_demo.ipynb
@@ -45,9 +45,9 @@
     "import os\n",
     "import importlib.resources\n",
     "\n",
-    "from metis import demo_data\n",
-    "from metis import io as metis_io\n",
-    "from metis import site_activation_vis"
+    "from bsst import demo_data\n",
+    "from bsst import io as bsst_io\n",
+    "from bsst import site_activation_vis"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "source": [
     "## Import data\n",
     "\n",
-    "For this demo, we read demonstration data embedded in the Metis Python package or data created by notebook `trial_specification_demo.ipynb`.\n",
+    "For this demo, we read demonstration data embedded in the Baseline Site Selection Tool Python package or data created by notebook `trial_specification_demo.ipynb`.\n",
     "\n",
     "To read in your own data, pass either a local file path or a path to a file in Cloud Storage to parameter `file_path` of method `load_ville_from_netcdf`."
    ]
@@ -90,10 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import demonstation data from the Metis Python package.\n",
+    "# Import demonstation data from the Baseline Site Selection Tool Python package.\n",
     "with importlib.resources.path(demo_data, 'site_list1_all_site_on.nc') as p:\n",
     "  demo_data_file_path = os.fspath(p)\n",
-    "  original_ds = metis_io.load_ville_from_netcdf(file_path=demo_data_file_path)"
+    "  original_ds = bsst_io.load_ville_from_netcdf(file_path=demo_data_file_path)"
    ]
   },
   {
@@ -103,9 +103,9 @@
    "outputs": [],
    "source": [
     "# You can also import demonstration data created by notebook trial_specification_demo.ipynb by uncommenting one of the lines below.\n",
-    "#original_ds = metis_io.load_ville_from_netcdf(file_path='demo_output/site_list1_all_site_on.nc')\n",
-    "#original_ds = metis_io.load_ville_from_netcdf(file_path='demo_output/site_list1_optimized_static.nc')\n",
-    "#original_ds = metis_io.load_ville_from_netcdf(file_path='demo_output/site_list1_prioritized.nc')"
+    "#original_ds = bsst_io.load_ville_from_netcdf(file_path='demo_output/site_list1_all_site_on.nc')\n",
+    "#original_ds = bsst_io.load_ville_from_netcdf(file_path='demo_output/site_list1_optimized_static.nc')\n",
+    "#original_ds = bsst_io.load_ville_from_netcdf(file_path='demo_output/site_list1_prioritized.nc')"
    ]
   },
   {
