Use name 'Baseline Site Selection Tool' in the code. (#31)
Changes included:
* Remove nbstripout precommit hook since we retain outputs in one of the notebooks.
* Update contact email address.
* Moves Python files into directory with updated name.
* Update package name in Python code.
* Update links within slide deck.
* Use the new Terra workspace.

--- a/notebooks/trial_specification_demo.ipynb
+++ b/notebooks/trial_specification_demo.ipynb
@@ -17,9 +17,9 @@
    "source": [
     "# Trial Specification Demo\n",
     "\n",
-    "The first step to use the Metis tool is to specify your trial.\n",
+    "The first step to use the Baseline Site Selection Tool is to specify your trial.\n",
     "\n",
-    "All data in the Metis tool is stored in [xarray.DataArray](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.html) datasets. This is a [convenient datastructure](http://xarray.pydata.org/en/stable/why-xarray.html) for storing multidimensional arrays with different labels, coordinates or attributes.    You don't need to have any expertise with xr.Datasets to use the Metis toolkit. The goal of this notebook is to walk you through the construction of the dataset that contains the specification of your trial.\n",
+    "All data in the Baseline Site Selection Tool is stored in [xarray.DataArray](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.html) datasets. This is a [convenient datastructure](http://xarray.pydata.org/en/stable/why-xarray.html) for storing multidimensional arrays with different labels, coordinates or attributes.    You don't need to have any expertise with xr.Datasets to use the Baseline Site Selection Tool. The goal of this notebook is to walk you through the construction of the dataset that contains the specification of your trial.\n",
     "\n",
     "This notebook has several sections:\n",
     "1. **Define the Trial**. In this section you will load all aspects of your trial, including the trial sites, the expected recruitment demographics for each trial site (e.g. from a census) as well as the rules for how the trial will be carried out.\n",
@@ -27,9 +27,9 @@
     "3. **Simulate the Trial** Given the incidence forecasts and the trial rules, the third section will simulate the trial.\n",
     "4. **Optimize the Trial** Given the parameters of the trial within our control, the next section asks whether we can  set those parameters to make the trial meet our objective criteria, for example most likely to succeed or to succeed as quickly as possible. We have written a set of optimization routines for optimizing different types of trials.\n",
     "\n",
-    "We write out different trial plans, which you can then examine interactively in the second notebook in the Metis Toolbox. That notebook lets you visualize how the trial is proceeding at a per site level and experiment with what will happen when you turn up or down different sites.\n",
+    "We write out different trial plans, which you can then examine interactively in the second notebook in the Baseline Site Selection Tool. That notebook lets you visualize how the trial is proceeding at a per site level and experiment with what will happen when you turn up or down different sites.\n",
     "\n",
-    "If you have questions about how to implement these steps for your clinical trial, or there are variations in the trial specification that are not captured with this framework, please contact metis@projectbaseline.com for additional help."
+    "If you have questions about how to implement these steps for your clinical trial, or there are variations in the trial specification that are not captured with this framework, please contact site-selection-tool@projectbaseline.com for additional help."
    ]
   },
   {
@@ -60,14 +60,14 @@
     "\n",
     "from IPython.display import display\n",
     "\n",
-    "# metis imports\n",
-    "from metis import demo_data\n",
-    "from metis import io as metis_io\n",
-    "from metis import util\n",
-    "from metis import optimization\n",
-    "from metis import sim\n",
-    "from metis import sim_scenarios\n",
-    "from metis import public_data"
+    "# bsst imports\n",
+    "from bsst import demo_data\n",
+    "from bsst import io as bsst_io\n",
+    "from bsst import util\n",
+    "from bsst import optimization\n",
+    "from bsst import sim\n",
+    "from bsst import sim_scenarios\n",
+    "from bsst import public_data"
    ]
   },
   {
@@ -137,7 +137,7 @@
     "##  Choose the sites\n",
     "A trial specification consists a list of sites, together with various properties of the sites. \n",
     "\n",
-    "For this demo, we read demonstration data embedded in the Metis Python package. Specifically, this information is loaded from the file `demo_data/site_list1.csv`. Each row of this file contains the name of a site, as well as the detailed information about the trial.  In this illustrative example, we pick sites in real US counties. Each column contains the following information:\n",
+    "For this demo, we read demonstration data embedded in the Baseline Site Selection Tool Python package. Specifically, this information is loaded from the file `demo_data/site_list1.csv`. Each row of this file contains the name of a site, as well as the detailed information about the trial.  In this illustrative example, we pick sites in real US counties. Each column contains the following information:\n",
     "\n",
     "* `opencovid_key` . This is a key that specifies location within [COVID-19 Open Data](https://github.com/GoogleCloudPlatform/covid-19-open-data). It is required by this schema because it is the way we join the incidence forecasts to the site locations.  \n",
     "* `capacity`, the number of participants the site can recruit each week, including both control arm and treatment arms. For simplicity, we assume this is constant over time, but variable recruitment rates are also supported. (See the construction of the `site_capacity` array below).\n",
@@ -632,7 +632,7 @@
    "source": [
     "sim.add_stuff_to_ville(c, incidence_model, site_df, num_scenarios=100)\n",
     "!mkdir -p demo_output\n",
-    "metis_io.write_ville_to_netcdf(c, 'demo_output/site_list1_all_site_on.nc')"
+    "bsst_io.write_ville_to_netcdf(c, 'demo_output/site_list1_all_site_on.nc')"
    ]
   },
   {
@@ -807,7 +807,7 @@
    "source": [
     "sim.add_stuff_to_ville(c, incidence_model, site_df, num_scenarios=100)\n",
     "!mkdir -p demo_output\n",
-    "metis_io.write_ville_to_netcdf(c, 'demo_output/site_list1_optimized_static.nc')"
+    "bsst_io.write_ville_to_netcdf(c, 'demo_output/site_list1_optimized_static.nc')"
    ]
   },
   {
@@ -1093,7 +1093,7 @@
    "source": [
     "sim.add_stuff_to_ville(c, incidence_model, site_df, num_scenarios=100)\n",
     "!mkdir -p demo_output\n",
-    "metis_io.write_ville_to_netcdf(c, 'demo_output/site_list1_prioritized.nc')"
+    "bsst_io.write_ville_to_netcdf(c, 'demo_output/site_list1_prioritized.nc')"
    ]
   }
  ],
