Can't output to ../bsst/demo_data/, so changing back to demo_data/.

--- a/notebooks/trial_specification_demo.ipynb
+++ b/notebooks/trial_specification_demo.ipynb
@@ -631,8 +631,8 @@
    ],
    "source": [
     "sim.add_stuff_to_ville(c, incidence_model, site_df, num_scenarios=100)\n",
-    "!mkdir -p demo_output\n",
-    "bsst_io.write_ville_to_netcdf(c, '../bsst/demo_data/site_list1_all_site_on.nc')"
+    "!mkdir -p demo_data\n",
+    "bsst_io.write_ville_to_netcdf(c, 'demo_data/site_list1_all_site_on.nc')"
    ]
   },
   {
@@ -806,8 +806,8 @@
    "outputs": [],
    "source": [
     "sim.add_stuff_to_ville(c, incidence_model, site_df, num_scenarios=100)\n",
-    "!mkdir -p demo_output\n",
-    "bsst_io.write_ville_to_netcdf(c, '../bsst/demo_data/site_list1_optimized_static.nc')"
+    "!mkdir -p demo_data\n",
+    "bsst_io.write_ville_to_netcdf(c, 'demo_data/site_list1_optimized_static.nc')"
    ]
   },
   {
@@ -1091,8 +1091,8 @@
    "outputs": [],
    "source": [
     "sim.add_stuff_to_ville(c, incidence_model, site_df, num_scenarios=100)\n",
-    "!mkdir -p demo_output\n",
-    "bsst_io.write_ville_to_netcdf(c, '../bsst/demo_data/site_list1_prioritized.nc')"
+    "!mkdir -p demo_data\n",
+    "bsst_io.write_ville_to_netcdf(c, 'demo_data/site_list1_prioritized.nc')"
    ]
   }
  ],
